--- a/backlinks/2026-02-25.md
+++ b/backlinks/2026-02-25.md
@@ -48,3 +48,5 @@
 | Hashnode | [Combating Identity Risks in the Age of AI with Sen](https://deepseax.hashnode.dev/combating-identity-risks-in-the-age-of-ai-with-sentinelone-singularity) | dofollow | Auto-SEO |
 | Dev.to | [AI-Accelerated Cyberattacks: 44% Surge in App Expl](https://dev.to/deepseax/ai-accelerated-cyberattacks-44-surge-in-app-exploits-7h5) | dofollow | Auto-SEO |
 | Hashnode | [AI-Accelerated Cyberattacks: 44% Surge in App Expl](https://deepseax.hashnode.dev/ai-accelerated-cyberattacks-44-surge-in-app-exploits) | dofollow | Auto-SEO |
+| Dev.to | [AI-Powered Cyber Risks: 44% Surge in App Exploits](https://dev.to/deepseax/ai-powered-cyber-risks-44-surge-in-app-exploits-4hbb) | dofollow | Auto-SEO |
+| Hashnode | [AI-Powered Cyber Risks: 44% Surge in App Exploits](https://deepseax.hashnode.dev/ai-powered-cyber-risks-44-surge-in-app-exploits) | dofollow | Auto-SEO |
