seo-auto: Dohdoor Backdoor 2026: Exploiting DNS-over-HTTPS f

--- a/backlinks/2026-02-26.md
+++ b/backlinks/2026-02-26.md
@@ -18,3 +18,5 @@
 | Hashnode | [Ransomware Payment Rate Drops to Record Low in 202](https://deepseax.hashnode.dev/ransomware-payment-rate-drops-to-record-low-in-2026-amid-surge-in-attacks) | dofollow | Auto-SEO |
 | Dev.to | [Olympique Marseille Cyberattack in 2026: Threat An](https://dev.to/deepseax/olympique-marseille-cyberattack-in-2026-threat-analysis-and-practical-defense-1c08) | dofollow | Auto-SEO |
 | Hashnode | [Olympique Marseille Cyberattack in 2026: Threat An](https://deepseax.hashnode.dev/olympique-marseille-cyberattack-in-2026-threat-analysis-and-practical-defense) | dofollow | Auto-SEO |
+| Dev.to | [Dohdoor Backdoor 2026: Exploiting DNS-over-HTTPS f](https://dev.to/deepseax/dohdoor-backdoor-2026-exploiting-dns-over-https-for-stealthy-c2-1ph1) | dofollow | Auto-SEO |
+| Hashnode | [Dohdoor Backdoor 2026: Exploiting DNS-over-HTTPS f](https://deepseax.hashnode.dev/dohdoor-backdoor-2026-exploiting-dns-over-https-for-stealthy-c2) | dofollow | Auto-SEO |
